vlib/v/checker/tests/assign_expr_undefined_err_a.vv
fn main() {
	a := a
	println(a)
}
